...
                })
            }
        })
    }
    
    override func viewWillAppear(_ animated: Bool) {
        self.navigationItem.title = "TMDB List"
    }
    override func viewWillDisappear(_ animated: Bool) {
        self.navigationItem.title = ""
    }
    
    @IBAction func filterButtonTapped(_ sender: Any) {
...
